# KDevelop-Training

./: ReadMe.md
Example/: CMakeLists.txt
LessonCode/: CMakeLists.txt
LessonCode/week01/homework/: CMakeLists.txt  JsonElement.cpp  JsonElement.h  JsonHandler.cpp  JsonHandler.h  Parser.cpp  Parser.h  ReadMe.md  Scanner.cpp  Scanner.h  main.cpp  util.h
LessonCode/week02/homework/: AhoCorasick.cpp  AhoCorasick.h  BoyerMoore.cpp  BoyerMoore.h  CMakeLists.txt  ReadMe.md  TestAhoCorasick.h  TestBoyerMoore.h  main.cpp  test.cpp  test_AhoCorasick.cpp  test_BoyerMoore.cpp  util.cpp  util.h
LessonCode/week03/practice/: CMakeLists.txt  hello.cpp  main.cpp
LessonCode/week03/practice/circlelib/: CMakeLists.txt  circle.cpp  circle.h
LessonCode/week03/practice/circlemain/: CMakeLists.txt  circletest.cpp  circletest.h  test.cpp
LessonCode/week04/: CMakeLists.txt
LessonCode/week04/homework/: AhoCorasick.cpp  AhoCorasick.h  BoyerMoore.cpp  BoyerMoore.h  BoyerMooreSearch.cpp  BoyerMooreSearch.h  ReadMe.md  main.cpp  test_AhoCorasick.cpp  test_AhoCorasick.h  test_BoyerMoore.h  util.cpp  util.h
LessonCode/week06/: CMakeLists.txt
LessonCode/week06/practice/06_test_clock/: CMakeLists.txt  kmainwindow.cpp  kmainwindow.h  kmainwindow.ui
LessonCode/week06/practice/QtSvgDrawTool/: image.qrc  kxcanvas.cpp  kxcanvas.h  kxhex.cpp  kxhex.h  kxline.cpp  kxline.h  kxrect.cpp  kxrect.h  kxshape.cpp  kxshape.h  kxshapefactory.cpp  kxshapefactory.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
LessonCode/week08/: CMakeLists.txt
LessonCode/week08/homework/: ReadMe.md
(+38 files in other folders)
